[tool.poetry]
name = "nexus-core"
version = "0.1.0"
description = "Inicializador de projeto"
authors = ["Lucas Vinicius"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nexus-core = "nexus_core.main:app"

